<resources>
    <string name="app_name">Cinemania</string>
    <string name="unknown_error_dialog_title">Unknown Error</string>
    <string name="unknown_error_dialog_message">Something went wrong.</string>
    <string name="action_ok">OK.</string>
    <string name="register">Register</string>
    <string name="description_no_account">Don\'t have an account?</string>
    <string name="description_already_have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="explore">Explore</string>
    <string name="saved">Saved</string>
    <string name="search_movies">Search movies</string>
    <string name="profile">Profile</string>
    <string name="explore_movies">Explore Movies</string>
    <string name="my_library">My Library</string>
    <string name="my_profile">My Profile</string>
    <string name="no_movies_found">No movies found.</string>
    <string name="show_popular_movies">Show popular movies</string>
    <string name="already_watched">Already watched</string>
    <string name="watch_later">Watch later</string>
    <string name="my_favorites">My favorites</string>
    <string name="description_empty_watch_list">You haven\'t added any movies to your watched list yet.</string>
    <string name="description_empty_favorites_list">You haven\'t added any movies to your favorites list yet.</string>
    <string name="description_empty_watch_later_list">You haven\'t added any movies to your watch later list yet.</string>
    <string name="recommendations">Movies we chose for you:</string>
    <string name="because_you_watched">Because you watched %s</string>
    <string name="because_you_liked">Because you liked %s</string>
    <string name="logout">Logout</string>
    <string name="description_logout_confirmation">Are you sure that you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="edit_name">Edit name</string>
    <string name="save">Save</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_password_length">Password must be at least 6 characters long</string>
    <string name="error_name_required">Name is required</string>
    <string name="duration">Duration:</string>
    <string name="overview">Overview:</string>
    <string name="genres">Genres:</string>
    <string name="spoken_languages">Spoken Languages:</string>
    <string name="production_countries">Production Countries:</string>
    <string name="release_date">Release Date:</string>
    <string name="rating">Rating:</string>
    <string name="invalid_movie">Invalid movie</string>
    <string name="top_rated_movies">Top rated movies</string>
</resources>
